@@ -1,3 +1,11 @@
+Fri Sep 22 22:27:33 1995  Theodore Y. Ts'o  <tytso@dcl>
+
+	* asn1_k_decode.c (asn1_decode_etype_info_entry): 
+	* krb5_decode.c (decode_krb5_alt_method): Remove the (int) cast,
+		since you can't take address of a value which has been
+		casted.  Instead we change the underlying type in the
+		structure to be an int.
+
 Wed Sep 13 10:51:31 1995 Keith Vetter (keithv@fusion.com)
 
         * asn1_k_decode.c, asn1_k_encode.c, krb5_dec.c, krb5_enc.c: 32
